workspace = { members = [ "xash", "xec", "xrand", "xsymmetric"] }
[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrand = { path = "./xrand" }
xash = { path = "./xash" }
xsymmetric = { path = "./xsymmetric" }
xec = { path = "./xec" }
